@@ -1,3 +1,12 @@
+2010-05-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Build the ImageDiff tool for all platforms including Windows and Symbian
+        https://bugs.webkit.org/show_bug.cgi?id=38706
+
+        * WebKit.pro:
+
 2010-05-07  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Add a few more files with Windows linefeeds to the .gitattributes file.
